// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cssed 1. single call macro: 1. single call macro 1`] = `


import { css } from 'cssed';

const styles = css\`
  .box {
    color: blue
  }
\`
      

      ↓ ↓ ↓ ↓ ↓ ↓

import _cssed_a from '../../.cssed/edb7e408acbb359c.module.css'
const styles = _cssed_a

`;

exports[`cssed 2. single call evaluation: 2. single call evaluation 1`] = `


import { css } from 'cssed';

const blue = 'blue'

const styles = css\`
  .box {
    color: \${blue}
  }
\`
      

      ↓ ↓ ↓ ↓ ↓ ↓

import _cssed_a from '../../.cssed/edb7e408acbb359c.module.css'
const blue = 'blue'
const styles = _cssed_a

`;

exports[`cssed 3. multi call macro: 3. multi call macro 1`] = `


import { css } from 'cssed';

const blue = css\`
.box {
  color: blue;
}
\`;

const red = css\`
.box {
  color: red;
}
\`;

export default props => (
  <div className={props.isRed ? red.box : blue.box} />
);
      

      ↓ ↓ ↓ ↓ ↓ ↓

import _cssed_b from '../../.cssed/edb7e408acbb359c_b.module.css'
import _cssed_a from '../../.cssed/edb7e408acbb359c_a.module.css'
const blue = _cssed_a
const red = _cssed_b
export default (props) => <div className={props.isRed ? red.box : blue.box} />

`;

exports[`cssed 4. multi call with external dependency: 4. multi call with external dependency 1`] = `


import { css } from 'cssed';
import { light, dark } from './module'

const btn = css\`
.light {
  color: \${light};
}
.dark {
  color: \${dark};
}
\`;

export default props => (
  <>
    <div className={btn.light} />
    <div className={btn.dark} />
  </>
);
      

      ↓ ↓ ↓ ↓ ↓ ↓

import _cssed_a from '../../.cssed/edb7e408acbb359c.module.css'
import { light, dark } from './module'
const btn = _cssed_a
export default (props) => (
  <>
    <div className={btn.light} />
    <div className={btn.dark} />
  </>
)

`;

exports[`cssed 5. multi call with external module dependency: 5. multi call with external module dependency 1`] = `


import { css } from 'cssed';
import { light, dark } from './module'

const btn = css\`
.light {
  color: \${light};
}
.dark {
  color: \${dark};
}
\`;

export default props => (
  <>
    <div className={btn.light} />
    <div className={btn.dark} />
  </>
);
      

      ↓ ↓ ↓ ↓ ↓ ↓

import _cssed_a from '../../.cssed/edb7e408acbb359c.module.css'
import { light, dark } from './module'
const btn = _cssed_a
export default (props) => (
  <>
    <div className={btn.light} />
    <div className={btn.dark} />
  </>
)

`;

exports[`cssed 6. function call in expression: 6. function call in expression 1`] = `


import { css } from 'cssed';
import { light, dark } from './constant'

const darkOrLight = (bool) => bool ? light : dark
const btn = css\`
.light {
  color: \${darkOrLight(true)};
}
.dark {
  color: \${darkOrLight(false)};
}
\`;

export default props => (
  <>
    <div className={btn.light} />
    <div className={btn.dark} />
  </>
);
      

      ↓ ↓ ↓ ↓ ↓ ↓

import _cssed_a from '../../.cssed/edb7e408acbb359c.module.css'
import { light, dark } from './constant'
const darkOrLight = (bool) => (bool ? light : dark)
const btn = _cssed_a
export default (props) => (
  <>
    <div className={btn.light} />
    <div className={btn.dark} />
  </>
)

`;

exports[`cssed 7. test url rebase: 7. test url rebase 1`] = `


import { css } from 'cssed';

const btn = css\`
.light {
  background-image: url("star.gif");
  list-style-image: url('../images/bullet.jpg');
  font-family: 'Open Sans', sans-serif;
  border-image: url('border.png');
  content: url('/content.png');
  content: url(data:image/png;base64,iVBORw0KGgoAAAA);
}
\`;

export default props => (
  <>
    <div className={btn.light} />
    <div className={btn.dark} />
  </>
);
      

      ↓ ↓ ↓ ↓ ↓ ↓

import _cssed_a from '../../.cssed/edb7e408acbb359c.module.css'
const btn = _cssed_a
export default (props) => (
  <>
    <div className={btn.light} />
    <div className={btn.dark} />
  </>
)

`;
